--- a/.github/workflows/daploy.yml
+++ b/.github/workflows/daploy.yml
@@ -17,8 +17,9 @@ jobs:
         uses: actions/checkout@master
 
       # 步驟二：編譯及部署
-      - name: buildAndDeploy
-        uses: JamesIves/github-pages-deploy-action@master
+      - name: Gulp Runner
+        uses: 2KAbhishek/gulp-runner@v0.3
+
         # 步驟設定
         env:
           GITHUB_TOKEN : ${{ secrets.GITHUB_TOKEN }}
